--- a/index.html
+++ b/index.html
@@ -7,6 +7,58 @@
     <link rel="stylesheet" href=".resources/css/style.css" type="text/css">
   </head>
   <body>
-
+    <header>
+      <div class="logo">
+        <img src="./resources/media/logo.png" alt="logo" />
+        <span>SECRET AGENT SUPPLY INC.</span>
+      </div>
+    </header>
+    <div class="container">
+      <div class="mainCont">
+        <div class="newarival">
+          <h2>NEW ARRIVAL</h2>
+          <h1>SPORT BIKES AND MOTORCYCLES</h1>
+        </div>
+      </div>
+      <div class="menu">
+        <nav>
+          <span>Menu</span>
+          <span>Apparel</span>
+          <span>Gadgets</span>
+          <span>Vehicles</span>
+          <span>Classes</span>
+          <span>Contact</span>
+        </nav>
+      </div>
+      <div class="items">
+        <div class="row1">
+          <div class="pen">
+            <img src="./resources/media/pen.png" alt="pen">
+            <h2>Exploding Pen</h2>
+          </div>
+          <div class="watch">
+            <img src="./resources/media/watch.png" alt="watch">
+            <h2>Cellular Watch</h2>
+          </div>
+          <div class="glasses">
+            <img src="./resources/media/glasses.png" alt="glasses">
+            <h2>Thermal Glasses</h2>
+          </div>
+        </div>
+        <div class="row2">
+          <div class="location">
+            <h2>Location</h2>
+            <p>-47.346436, 84.32354</p>
+          </div>
+          <div class="hours">
+            <h2>Hours</h2>
+            <p>0800 - 1800</p>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <p>Copyright Secret Agent Supply Inc.</p>
+      </footer>
+    </div>
   </body>
 </html>
