final new arrival content

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Secret Agent Supply Inc.</title>
-    <link rel="stylesheet" href=".resources/css/reset.css" type="text/css">
-    <link rel="stylesheet" href=".resources/css/style.css" type="text/css">
+    <link rel="stylesheet" href="./resources/css/reset.css" type="text/css">
+    <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
   <body>
     <header>
@@ -15,9 +15,11 @@
     </header>
     <div class="container">
       <div class="mainCont">
-        <div class="newarival">
-          <h2>NEW ARRIVAL</h2>
-          <h1>SPORT BIKES AND MOTORCYCLES</h1>
+        <div class="maincHold">
+          <div class="newarrival">
+            <h2>NEW ARRIVAL</h2>
+            <h1>SPORT BIKES AND MOTORCYCLES</h1>
+          </div>
         </div>
       </div>
       <div class="menu">
