--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
         </div>
       </div>
       <footer>
-        <p>Copyright Secret Agent Supply Inc.</p>
+        <div class="foot">
+          <p>Copyright Secret Agent Supply Inc.</p>
+        </div>
       </footer>
     </div>
   </body>
