--- a/index.html
+++ b/index.html
@@ -34,26 +34,36 @@
       </div>
       <div class="items">
         <div class="row1">
-          <div class="pen">
+          <div class="item">
             <img src="./resources/media/pen.png" alt="pen">
-            <h2>Exploding Pen</h2>
+            <div class="titletxt">
+              <h2>Exploding Pen</h2>
+            </div>
           </div>
-          <div class="watch">
+          <div class="item">
             <img src="./resources/media/watch.png" alt="watch">
-            <h2>Cellular Watch</h2>
-          </div>
-          <div class="glasses">
+              <div class="titletxt">
+                <h2>Cellular Watch</h2>
+              </div>
+            </div>
+          <div class="item">
             <img src="./resources/media/glasses.png" alt="glasses">
-            <h2>Thermal Glasses</h2>
+            <div class="titletxt">
+              <h2>Thermal Glasses</h2>
+            </div>
           </div>
         </div>
         <div class="row2">
           <div class="location">
-            <h2>Location</h2>
+            <div class="titletxt">
+              <h2>Location</h2>
+            </div>
             <p>-47.346436, 84.32354</p>
           </div>
           <div class="hours">
-            <h2>Hours</h2>
+            <div class="titletxt">
+              <h2>Hours</h2>
+            </div>
             <p>0800 - 1800</p>
           </div>
         </div>
